[gd_scene load_steps=5 format=3 uid="uid://d0kyw2f1lxeug"]

[ext_resource type="Script" path="res://die.gd" id="1_0laps"]
[ext_resource type="PackedScene" uid="uid://beucdsyx513mr" path="res://assets/models/die/die_model.glb" id="2_ar7o1"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_auvbn"]
bounce = 0.35

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_db0bc"]
points = PackedVector3Array(0.08, 0.08, 0.0799978, 0.08, 0.08, -0.08, -0.08, 0.08, 0.0799978, 0.08, -0.08, 0.0799978, 0.08, -0.08, -0.08, -0.08, 0.08, -0.08, -0.08, -0.08, 0.0799978, -0.08, -0.08, -0.08)

[node name="Die" type="RigidBody3D"]
mass = 0.4
physics_material_override = SubResource("PhysicsMaterial_auvbn")
max_contacts_reported = 10
contact_monitor = true
script = ExtResource("1_0laps")

[node name="DieModel" parent="." instance=ExtResource("2_ar7o1")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_db0bc")

[node name="Faces" type="Node3D" parent="."]

[node name="RayCast3D1" type="RayCast3D" parent="Faces"]
target_position = Vector3(-1, 0, 0)
debug_shape_custom_color = Color(0.831373, 0, 0, 1)

[node name="RayCast3D2" type="RayCast3D" parent="Faces"]
target_position = Vector3(0, 0, -1)
debug_shape_custom_color = Color(0.0942323, 0.74902, 0, 1)

[node name="RayCast3D3" type="RayCast3D" parent="Faces"]
debug_shape_custom_color = Color(0, 0, 0.917647, 1)

[node name="RayCast3D4" type="RayCast3D" parent="Faces"]
target_position = Vector3(0, 0, 1)
debug_shape_custom_color = Color(0.862745, 0.856623, 0, 1)

[node name="RayCast3D5" type="RayCast3D" parent="Faces"]
target_position = Vector3(0, 1, 0)
debug_shape_custom_color = Color(0, 1, 1, 1)

[node name="RayCast3D6" type="RayCast3D" parent="Faces"]
target_position = Vector3(1, 0, 0)
debug_shape_custom_color = Color(1, 0, 1, 1)
